// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agents reducers create agent 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers delete agent 1`] = `
{
  "agents": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "all": [],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers fetch agents pagination 1`] = `
Immutable.Map {
  "all": Immutable.List [],
  "pagination": Immutable.Map {
    "data": Immutable.List [
      Immutable.Map {
        "name": "Alex",
      },
      Immutable.Map {
        "name": "Romain",
      },
    ],
    "meta": Immutable.Map {
      "nb_pages": 2,
      "page": 1,
    },
  },
  "locations": Immutable.Map {},
  "typingStatuses": Immutable.Map {},
}
`;

exports[`agents reducers fetch users (agents) 1`] = `
Immutable.Map {
  "all": Immutable.List [],
  "pagination": Immutable.List [],
  "locations": Immutable.Map {},
  "typingStatuses": Immutable.Map {},
}
`;

exports[`agents reducers fetch users (agents) 2`] = `
Immutable.Map {
  "all": Immutable.List [],
  "pagination": Immutable.List [],
  "locations": Immutable.Map {},
  "typingStatuses": Immutable.Map {},
}
`;

exports[`agents reducers fetch users (agents) 3`] = `
Immutable.Map {
  "all": Immutable.List [
    Immutable.Map {
      "id": 1,
    },
    Immutable.Map {
      "id": 2,
    },
  ],
  "pagination": Immutable.List [],
  "locations": Immutable.Map {},
  "typingStatuses": Immutable.Map {},
}
`;

exports[`agents reducers set agents location 1`] = `
{
  "all": [],
  "locations": [
    {
      "customers": [
        "1",
        "2",
      ],
      "ticket": "1",
    },
    {
      "customers": [
        "1",
      ],
      "ticket": "2",
    },
  ],
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers set agents typing status 1`] = `
{
  "all": [],
  "locations": {},
  "pagination": [],
  "typingStatuses": [
    {
      "ticket": "1",
      "users": [
        "1",
        "2",
      ],
    },
    {
      "ticket": "2",
      "users": [
        "1",
      ],
    },
  ],
}
`;

exports[`agents reducers should update the matching row in the list of agents when the current user is updated 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Alex",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers should update the matching row in the list of agents when the current user is updated 2`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers update agent 1`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Alex",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;

exports[`agents reducers update agent 2`] = `
{
  "all": [
    {
      "id": 1,
      "name": "Romain",
    },
    {
      "id": 2,
      "name": "John",
    },
  ],
  "locations": {},
  "pagination": [],
  "typingStatuses": {},
}
`;
